# APC

./: .gitignore
code/simulator/: CMakeLists.txt  Test_Results.md  correct_simulation_output.txt  gprof_job.sh  perf_job.sh  perf_job_big_n.sh  perf_job_small_n.sh
code/simulator/src/app/: initialConditions.cpp  initialConditions.hpp  simulate.cpp
code/simulator/src/core/: Body.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Universe.hpp
code/simulator/src/io/: outputWritter.cpp  outputWritter.hpp
code/simulator/test_results/baseline/: perf_N1000.txt  perf_N10000.txt  perf_N5000.txt  perf_N50000.txt  time_results_1000.txt  time_results_10000.txt  time_results_5000.txt  time_results_50000.txt
code/simulator/test_results/openmd/: perf_N100000.txt  perf_N50000.txt  timeresults100000.txt  timeresults50000.txt
code/simulator/test_results/openmd-threads/M50000/: perf_T10.txt  perf_T16.txt  perf_T24.txt  perf_T32.txt  perf_T5.txt  time_T10.txt  time_T16.txt  time_T24.txt  time_T32.txt  time_T5.txt
code/simulator/test_results/openmd-threads/N100000/: perf_T10.txt  perf_T16.txt  perf_T24.txt  perf_T32.txt  perf_T5.txt  slurm_N100000_T10_575752.err  slurm_N100000_T16_575753.err  (+8 more)
code/simulator/test_results/phase 3/: perf_N10000.txt  time_results_50000.txt
code/simulator/test_results/seq_optimized/: perf_N1000.txt  perf_N10000.txt  perf_N5000.txt  time_results_1000.txt  time_results_10000.txt  time_results_5000.txt
code/simulator/test_results/seq_simd/: perf_N1000.txt  perf_N5000.txt  perf_N50000.txt  time_results_1000.txt  time_results_10000.txt  time_results_5000.txt
(+11 files in other folders)
